# final

./: .gitignore  CMakeLists.txt  README.md  README.txt  enableRobot.sh  hider.py  nav.py  package.xml  run_finder  run_hider  run_simulation
config/: default.rviz  exploration_costmap.yaml  global_costmap_params.yaml
config/simulation/: base_local_planner_params.yaml  costmap_common_params.yaml  finder.rviz  global_costmap_params.yaml  hider.rviz  local_costmap_params.yaml
launch/: amcl.launch  exploration.launch  exploration_simulation.launch  master_finder_simulation.launch  master_hider_simulation.launch  master_real.launch  master_simulation.launch  navigation.launch  navigation_simulation.launch  pioneer.launch
maps/: cave.yaml  hospital.yaml  mitochondria.yaml
nodes/: fake_amcl.py  finder.py  finder_sim.py  hider.py  hider_sim.py
nodes/lib/: Fembot.py
worlds/: cave.cfg  cave.world  hospital.cfg  hospital.world  mitochondria.cfg  mitochondria.world
